---Framework Version Changelog---
Version 1.0: First beta release
Version 1.1: Structure re-working; Added Changelog

---File-Specific Changelog---
/applications/shared/controller/main.php
    Version 1.0: First beta release

/applications/shared/controller/userErrors.php
    Version 1.0: First beta release

/applications/shared/controller/webContent.php
    Version 1.0: First beta release
    Version 1.1: Added support for directories
    Version 1.2: Deprecated
    
/applications/shared/model/helloWorld.php
    Version 1.0: First beta release

/plugins/fpd_rewrite.php
    Version N/A: Place holding for full path rewriting
    3/18/2011: Deleted for clean-ness
    
/plguins/cache.php
    Version 1.0: First beta release
    
/system/configuration.php
    Version 1.0: First beta release
    
/system/controller.php
    Version 1.0: First beta release
    
/system/db.php
    Version 1.0: First beta release
    
/system/dependencyInjection.php
    Version 1.0: First beta release
    
/system/error.php
    Version 1.0: First beta release
    
/system/functions.php
    Version 1.0: First beta release
    
/system/router.php
    Version 1.0: First beta release
    Version 1.1: Added support for directories
    Version 1.1.1: Made it possible to ommit 'main' from all the URIs. I.e. now it checks to see if /page exists under /main/page before calling a 404
                   Fixed errors in URI taxonomy structures and how they incorporate into controllers
    Version 1.1.2: Inexistent views will now throw a 404 instead of an error
    
/system/template.php
    Version 1.0: First beta release
    Version 1.1: Added support for directories
    Version 1.1.1: Inexistent views will now throw a 404 instead of an error
    
/htaccess_example
    Version 1.0: Generic URL rewriting for Apache