@@ -7,7 +7,7 @@ V. TODO
 
 +++ About +++
 Author: Kenyon Haliwell
-URL: http://battleborndevelopment.com/
+URL: http://khdev.net/
 Version: 1.1
 
 This framework was created to be very small, flexible and portable. It uses PHP5 coding standards.
