@@ -1,7 +1,7 @@
 <?php
 /**
  * @Author: Kenyon Haliwell
- * @URL: http://battleborndevelopment.com/
+ * @URL: http://khdev.net/
  * @Date Created: 2/21/11
  * @Date Modified: 3/5/11
  * @Purpose: Default controller for a website
@@ -22,11 +22,11 @@ class main extends controller
     {
         //Loads the model helloWorld
         $hellowWorld = $this->load_model('helloWorld');
-        
+
         //Sets a template variable (used via {} inside a view)
         $this->system_di->template->helloWorld = $hellowWorld->helloWorld();
         $this->system_di->template->title = 'Some Title';
-        
+
         //Parses the HTML from the view
         $this->system_di->template->parse('main');
     }//End index
