@@ -1,7 +1,7 @@
 <?php
 /**
  * @Author: Kenyon Haliwell
- * @URL: http://battleborndevelopment.com/
+ * @URL: http://khdev.net/
  * @Date Created: 2/20/11
  * @Date Modified: 3/5/11
  * @Purpose: Implements site configurations into objects usable by the framework
@@ -22,28 +22,28 @@
  */
 class configuration
 {
-    
+
     /**
      * @Var: Object
      * @Access: Private
      * @Static
      */
     private static $_configInstance;
-    
+
     /**
      * @Var: String
      * @Access: Private
      * @Static
      */
     private static $_configFile;
-    
+
     /**
      * @Var: Array
      * @Access: Private
      * @Static
      */
     private static $_configValues;
-    
+
     /**
      * @Purpose: Private constructor: only allow 1 instance
      * @Access: Private
@@ -63,7 +63,7 @@ class configuration
         } else {
             $site_configValues = array();
         }
-        
+
         if (is_array($shared_configValues) || is_array($site_configValues) ) {
             self::$_configValues = array_merge($shared_configValues, $site_configValues);
         } else {
@@ -72,14 +72,14 @@ class configuration
             }
         }
     }//End __construct
-    
+
     /**
      * @Purpose: Disallow cloning of configuration class
      * @Access: Private
      * @Final
      */
     final private function __clone() {}
-    
+
     /**
      * @Purpose: Enables object-like ability to get config values
      * @Param: string $key
@@ -90,7 +90,7 @@ class configuration
     {
         return array_key_exists($key, self::$_configValues) ? self::$_configValues[$key] : NULL;
     }//End __get
-    
+
     /**
      * @Purpose: Initialize unique instance of $_configInstance
      * @Access: Public
@@ -103,10 +103,10 @@ class configuration
             $class = __CLASS__;
             self::$_configInstance = new $class;
         }
-        
+
         return self::$_configInstance;
     }//End initialize
-    
+
     /**
      * @Purpose: Set the path location of the config file
      * @Access: Public
@@ -117,7 +117,7 @@ class configuration
         self::$_configFile = $file_name;
         return true;
     }//End set_file
-    
+
     /**
      * @Purpose: Used for debugging, print out everything stored in $_configValues
      * @Access: Public
