@@ -1,7 +1,7 @@
 <?php
 /**
  * @Author: Kenyon Haliwell
- * @URL: http://battleborndevelopment.com/
+ * @URL: http://khdev.net/
  * @Date Created: 2/21/11
  * @Date Modified: 3/5/11
  * @Purpose: Controller class; used for loading models
@@ -25,7 +25,7 @@ abstract class controller
     * @Access: Protected
     */
     protected $system_di;
-    
+
     /**
     * @Purpose: Load dependencyInjector into scope
     * @Param: object $system_di
@@ -35,7 +35,7 @@ abstract class controller
     {
         $this->system_di = $system_di;
     }//End __construct
-    
+
     /**
     * @Purpose: Used to load models into the controller
     * @Param: string $model
@@ -47,7 +47,7 @@ abstract class controller
         $model_path = str_replace('_', DIRECTORY_SEPARATOR, $model);
         $site_model = __SITE_PATH . 'model' . DIRECTORY_SEPARATOR . $model_path . '.php';
         $shared_model = __APPLICATIONS_PATH . 'shared' . DIRECTORY_SEPARATOR . 'model' . DIRECTORY_SEPARATOR . $model_path . '.php';
-        
+
         if (is_readable($site_model)) {
             include_once $site_model;
         } elseif (is_readable($shared_model)) {
@@ -55,11 +55,11 @@ abstract class controller
         } else {
             $this->system_di->error->trigger_error('Cannot load model (' . $model_path . '). Unable to read: ' . $site_path . ' or ' . $shared_model, 'Model');
         }
-        
+
         $model_class = 'model_' . $model;
         return new $model_class;
     }//End load_model
-    
+
     /**
      * @Purpose: Require that controllers have an index function
      * @Abstract
