@@ -1,7 +1,7 @@
 <?php
 /**
  * @Author: Kenyon Haliwell
- * @URL: http://battleborndevelopment.com/
+ * @URL: http://khdev.net/
  * @Date Created: 3/4/11
  * @Date Modified: 3/5/11
  * @Purpose: Handle database connections
@@ -16,7 +16,7 @@
  * USAGE:
  *  initialize the router
  *      $system_di->db = new db($system_di);
- *      
+ *
  * 	$results = Db::query('SELECT * FROM users WHERE username=:user AND email=:email', array('user' => $user, 'email' => $email));
  *
  * Any PDO query format is acceptable (http://php.net/pdo.prepare)
@@ -28,13 +28,13 @@ class db
     * @Access: Public
     */
     public $system_di;
-    
+
     /**
      * @Var Object
      * @Access: Private
      */
     private $_storeDB;
-    
+
     /**
      * @Purpose: Load dependencyInjector into scope; Only allow 1 instance
      * @Param: object $system_di
@@ -46,14 +46,14 @@ class db
         $this->system_di = $system_di;
         $this->initialize();
     }//End __construct
-    
+
     /**
      * @Purpose: Disallow cloning of db
      * @Access: Private
      * @Final
      */
     final private function __clone() {}
-    
+
     /**
     * @Purpose: Used to initialize the db class using PDO
     * @Access: Public
@@ -69,10 +69,10 @@ class db
                 $this->system_di->error->trigger_error($e->getMessage(), 'Database');
             }
         }
-        
+
         return $this->_storeDB;
     }//End initialize
-    
+
     /**
     * @Purpose: Used to build and execute the query
     * @Param: string $query
@@ -85,7 +85,7 @@ class db
         try {
             if (is_array($bindings)) {
                 $prepared_statement = $this->_storeDB->prepare($query);
-                
+
                 foreach ($bindings as $binding => $value) {
                     if (is_array($value)) {
                         switch (count($value)) {
@@ -106,7 +106,7 @@ class db
                         $prepared_statement->bindParam($binding, $value);
                     }
                 }
-                
+
                 $prepared_statement->execute();
                 return $prepared_statement->fetchAll();
             } elseif(strtolower(substr($query, 0, 6)) === 'select') {
@@ -119,7 +119,7 @@ class db
             $this->system_di->error->trigger_error($e->getMessage(), 'Database');
         }
     }//End query
-    
+
     /**
     * @Purpose: Used to de-initialize the db class
     * @Access: Public
@@ -128,6 +128,6 @@ class db
     {
         $this->_storeDB = NULL;
     }//End close
-    
+
 }//End db
 //End file
