@@ -1,7 +1,7 @@
 <?php
 /**
  * @Author: Kenyon Haliwell
- * @URL: http://battleborndevelopment.com/
+ * @URL: http://khdev.net/
  * @Date Created: 2/20/11
  * @Date Modified: 3/5/11
  * @Purpose: Core functions.
@@ -18,7 +18,7 @@ function __autoload($class_name)
     $class_path = str_replace('_', DIRECTORY_SEPARATOR, $class_name);
     $system_class = __SYSTEM_PATH . $class_path . '.php';
     $plugin_class = __PLUGINS_PATH . $class_path . '.php';
-	
+
     if (is_readable($system_class)) {
         include $system_class;
         return true;
