@@ -1,3 +1,7 @@
+---Commit Changelog---
+11/18/2012 - Commit 1
+    Updated all file comment headers to incorporate the correct url. (khdev.net)
+
 ---Framework Version Changelog---
 Version 1.0: First beta release
 Version 1.1: Structure re-working; Added Changelog
